# physical_ai_humanoid_chatbot1

./: .env.example  .gitignore  .mcp.json  DEPLOYMENT.md  README.md  docker-compose.yml  push-to-github.bat
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/auth_service/: Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/auth_service/.railway/: config.json
backend/auth_service/src/: __init__.py  main.py
backend/auth_service/src/api/: __init__.py
backend/auth_service/src/api/routes/: __init__.py
backend/auth_service/src/core/: __init__.py  config.py  email.py  security.py
backend/auth_service/src/db/: __init__.py  init_db.py  session.py
backend/auth_service/src/models/: __init__.py  email_verification.py  oauth.py  password_reset.py  user.py
backend/chatbot_service/: Dockerfile  nixpacks.toml  railway.toml  requirements.txt
backend/chatbot_service/src/: __init__.py  main.py
backend/personalization_service/: Dockerfile  nixpacks.toml  railway.toml  requirements.txt
backend/personalization_service/src/: __init__.py  main.py
frontend/: docusaurus.config.ts  package.json  sidebars.ts  vercel.json
frontend/docs/en/: chapter-01-foundations.md  chapter-02-ros2.md  chapter-03-gazebo.md  chapter-04-isaac.md  chapter-05-vla.md  chapter-06-capstone.md  intro.md
frontend/i18n/: en.json  ur.json
frontend/src/: clientModules.ts
scripts/embedding-indexer/: index-content.py
specs/001-ai-textbook-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+43 files in other folders)
